css/style.css
/*! hard work beats talent when talent doesn't work hard*/
/** Variables ############### */
:root {
  --white: #ffffff;
  --pink: #fe7ebb;
  --rose: #fc6681;
  --blue-pale: #eceafe;
  --blue-violet: #c2beff;
  --blue-gray: #a4a2af;
  --blue-purple-light: #8078fb;
  --blueish-btn: #7e76f9;
  --purplish: #784eeb;
  --blue-purple-dark: #6159e5;
  --gray: #f6f6f8;
  --black: #000000;
}

/** Fonts ###############  */
/** font-family: 'Poppins', sans-serif; */
/** font-family: 'Lato', sans-serif; */
@import url("https://fonts.googleapis.com/css2?family=Lato&family=Poppins&display=swap");

/** Reset ###############  */
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

/** Body & Container */
body {
  font-family: "Poppins", sans-serif;
  font-size: 16px;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100vw;
  height: 100vh;
  background-image: url(../img/header-bg-shape.svg);
  background-repeat: no-repeat;
  background-position: top right;
  background-size: 50vw;
}

/** Sitewide Shared Values ###############  */
h2 {
  color: var(--purplish);
  font-family: "Lato", sans-serif;
  font-size: 0.7em;
  font-weight: 100;
}

h3 {
  font-size: 1.5em;
  font-weight: 600;
  line-height: 1.35;
}

h4 {
  font-size: 0.6em;
}

.p-small {
  font-size: 0.5em;
}

.p-gray {
  color: var(--blue-gray);
  font-weight: 200;
}

.p-bigger-than-h2 {
  font-size: 1em;
}

button {
  width: 16em;
  height: 3.5em;
  color: var(--white);
  font-size: 0.5em;
  background-color: var(--blueish-btn);
  border: 0.2em 0.4em solid var(--blue-gray);
  border-radius: 4em;
  margin: 2em 0;
}

/** Header ############### */
header {
  display: flex;
  justify-content: space-around;
  min-width: 100%;
  margin: 2em 0;
}

/* header & footer */
.logo {
  background-image: url(../img/logo.svg);
  background-repeat: no-repeat;
  background-size: contain;
  padding: 2em;
}

.logo-header {
  margin-right: 10%;
}

nav {
  margin-right: 5em;
}

.ul-links-nav {
  display: flex;
  justify-content: space-between;
}

.ul-links-nav li {
  margin: 1em;
}

li {
  list-style: none;
  font-size: 0.6em;
  color: var(--white);
}

/** Main ############### */
main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

/** Main section: Squares about company ############### */
.grid-top {
  display: grid;
  grid-template-rows: 25em 25em;
  grid-template-columns: 25em 25em;
  /* gap: 1em; */
  min-width: 100%;
}

.square-1 {
  display: flex;
  margin-top: 3em;
}

.div-top-social-media {
  display: flex;
  flex-direction: column;
  justify-items: baseline;
  height: 10em;
  margin: 4em 2em 0 0;
}

.icon-s-media {
  width: auto;
  height: 0.5em;
  margin: 0.5em;
}

.square-2 {
  justify-self: flex-end;
}

.img-girl-think {
  width: 18em;
  height: auto;
}

.square-3 {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding-bottom: 5em;
}

.img-people-phone {
  width: 19em;
  height: auto;
}

.square-4 {
  background-image: url(../img/biography-background.svg);
  background-repeat: no-repeat;
  background-size: cover;
  padding: 4em 5em 0 4em;
}

/** Main section: Cards services ###############  */
.block-services {
  min-width: 100%;
}

.div-h-services {
  padding-left: 5em;
  padding-bottom: 2em;
}

.grid-services {
  display: grid;
  grid-template-rows: 15em 15em;
  grid-template-columns: 12em 12em 12em;
  gap: 3em;
  justify-content: center;
  background-image: url(../img/cards-background.svg);
  background-repeat: no-repeat;
  background-size: cover;
  margin-bottom: 10em;
}

.card {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 1em;
  background-color: var(--white);
  border-radius: 5%;
  box-shadow: 0.1em 0.1em 0.1em var(--blue-gray);
}

.card * {
  margin: 0.5em 0;
}

.card img {
  align-self: center;
  width: 3em;
}

.btn-card {
  width: 8em;
  height: 2.5em;
  margin: auto 1em 0 auto;
}

/** Main section: Cards pricing ############### */
.block-pricing {
  min-width: 100%;
  background-color: var(--blue-pale);
  margin-bottom: 5em;
}

.h2-pricing {
  margin: 3em 0 0;
  text-align: center;
}

.h3-pricing {
  margin: 0.5em 0 1.5em;
  text-align: center;
}

.grid-pricing {
  display: grid;
  grid-template-rows: 15em;
  grid-template-columns: 12em 12em 12em;
  background-repeat: no-repeat;
  background-size: contain;
  justify-content: space-around;
  margin: 0 0 3em;
}

.card-price {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
}

.h4-price {
  font-size: 0.9em;
  font-weight: 400;
}

.p-price-num {
  color: var(--blue-purple-dark);
}

.btn-card-price {
  width: 10em;
  height: 3em;
  margin: 1em 0;
}

.btn-card-price-clear {
  color: var(--black);
  background-color: transparent;
  border: 0.2em solid var(--blueish-btn);
}

/** Newsletter signup ############### */
.div-newsletter {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.p-newsletter {
  font-weight: 200;
  margin-bottom: 0.75em;
}

.form-email {
  display: flex;
  align-items: center;
}

#email {
  width: 20em;
  height: 2em;
  color: var(--blue-gray);
  text-align: initial;
  background-color: var(--gray);
  margin-right: 1em;
  border: 0.1 solid var(--blue-pale);
  border-radius: 3%;
}

.btn-newsletter {
  width: 10em;
  height: 3em;
  margin: 1em 0;
}

/** Footer ############### */
footer {
  display: flex;
  justify-content: space-around;
  background-color: var(--blue-purple-dark);
  padding: 0 15em;
  margin-top: 5em;
  min-width: 100%;
}

.ft-column {
  margin: 1em;
}

.div-ft-logo-social-media {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: var(--white);
}

.p-links,
.p-hours,
.p-contact {
  font-size: 0.75em;
  color: var(--white);
  margin-bottom: 0.75em;
}

footer > div > ul > li {
  font-size: 0.5em;
  margin: 0.75em 0;
}

.ul-contact > li > img {
  width: 1em;
}

/* Optional SVGs background in footer  */
/* .footer-shape-1,
.footer-shape-2 {
  width: 100%;
  height: auto;
  position: absolute;
  top: 200%;
  clip: margin-box;
  z-index: -1;
}

.footer-shape-2 {
  left: 25%;
  top: 205%;
} */

/** Media queries ############### */
/** media greater >= 1440px  */
@media all and (min-width: 1440px) {
  .logo-header {
    margin-right: 0;
    margin-left: 15%;
  }

  nav {
    margin-right: 20em;
  }
}

/** media less than 1000px  */
@media all and (max-width: 999px) {
  .logo-header {
    margin-right: 35%;
  }

  nav {
    margin-right: 0;
  }

  .square-1 {
    margin-left: 1em;
  }

  footer {
    padding: 0;
  }
}

/** media less than 768px  */
@media all and (max-width: 767px) {
  /* Header */
  header {
    margin: 1em 0 0.5em;
  }

  /* Main section: Squares about company */
  .grid-top {
    grid-template-rows: 15em 15em;
    grid-template-columns: 20em 20em;
  }

  .square-1 {
    margin-left: 4em;
  }

  .square-2 {
    justify-self: center;
  }

  .img-girl-think {
    width: 15em;
  }

  .square-3 {
    padding-bottom: 0;
  }

  .img-people-phone {
    width: 15em;
  }

  .square-4 {
    /* padding: 4em 5em 0 4em; */
    padding: 2em 4em 0 1em;
  }

  /* Main section: Cards services */
  .block-services {
    margin-top: 3em;
  }

  .grid-services {
    grid-template-rows: 15em 15em 15em;
    grid-template-columns: 12em 12em;
  }

  /* Main section: Cards pricing */
  .block-pricing {
    margin-bottom: 5em;
  }

  .h2-pricing {
    margin: 3em 0 0;
  }

  .h3-pricing {
    margin: 0 0 1em;
  }

  .grid-pricing {
    grid-template-rows: 15em;
    grid-template-columns: 10em 10em 10em;
    justify-content: space-evenly;
  }

  .h4-price {
    font-size: 0.75em;
  }

  .p-price-num {
    align-self: center;
  }
}

/** media less than 600px  */
@media all and (max-width: 599px) {
  /* Header */
  header {
    margin: 0.5em 0 0;
  }

  .logo {
    /* header & footer */
    padding: 1.5em;
  }

  .logo-header {
    margin-right: 0;
  }

  nav {
    margin-right: 0;
    margin-left: 6em;
  }

  .ul-links-nav li {
    margin: 0.25em;
    font-size: 0.5em;
  }

  /* Main section: Squares */
  .grid-top {
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    justify-content: center;
  }

  .square-1 {
    margin-top: 1em;
    margin-left: 1em;
  }

  .div-top-social-media {
    margin-top: 4em;
    margin-right: 0;
  }

  .square-2 {
    display: none;
  }

  .square-3 {
    order: 1;
    align-self: center;
    margin-bottom: 0;
  }

  .img-people-phone {
    width: 10em;
  }

  .square-4 {
    align-self: center;
    margin: 0 4em 0 4.5em;
    padding: 0;
  }

  /* Main section: Cards services */
  .grid-services {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 1em;
  }

  .div-h-services {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0;
    margin-bottom: 0;
  }

  .card {
    align-items: center;
    width: 13em;
    padding: 1em;
    margin-top: 0.5em;
  }

  /* Main section: Cards pricing */
  .block-pricing {
    margin-bottom: 2em;
  }

  .h2-pricing {
    margin: 2em 0 0;
  }

  .h3-pricing {
    margin: 0 0 0.5em;
  }

  .grid-pricing {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 1em;
  }

  .card-price {
    margin-bottom: 1em;
  }

  .card-price-2 {
    order: 1;
  }

  /* Newsletter Section */
  #email {
    width: 12em;
  }

  /* Footer Section */
  footer {
    display: flex;
    flex-direction: column;
    margin-top: 1em;
    min-width: 100%;
  }

  .ft-column-links {
    margin-left: 40vw;
    margin-top: 0;
  }

  .div-ft-logo-social-media {
    margin-bottom: 0.25em;
  }
}

